meja/tests/try-non-exn-constructor.stderr
File "tests/try-non-exn-constructor.meja", line 5, characters 6-7:
Error: Incompatible types exn and t:
       Cannot unify exn and t
