meja/tests/try-non-exn-constructor.meja
type t = A;

let x = fun () => {
  try (failwith("")) {
    | A => 15
  };
};
